--- a/public/index.html
+++ b/public/index.html
@@ -8,17 +8,21 @@
       content="width=device-width, initial-scale=1"
       user-scalable="0"
     />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#983993" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web site created using create-react-app__SOOOOWAN00"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"  crossorigin="use-credentials"/>
+    <link
+      rel="manifest"
+      href="%PUBLIC_URL%/manifest.json"
+      crossorigin="use-credentials"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
