--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,15 @@
       name="description"
       content="Web site created using create-react-app__SOOOOWAN00"
     />
+    <meta name="author" content="이수완SOOOWAN" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "name": "SOOOWAN의 포트폴리오",
+        "url": "https://portfolio-react-sooowans-projects.vercel.app/",
+        "description": "이수완의 다양한 포트폴리오"
+      }
+    </script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
