--- a/public/index.html
+++ b/public/index.html
@@ -79,6 +79,10 @@
       })(window.location);
     </script>
     <!-- End Single Page Apps for GitHub Pages -->
+    <meta
+      name="google-site-verification"
+      content="mZ7QH2Z1tF0p_6V0FhCCAlPa2Stb03gcQliG2FvW2TY"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
